# Yandex_Market_Parser

./: README.md  main.py  pyproject.toml  requirements.txt
