[project]
name = "pythonproject"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi[standard]>=0.128.0",
    "httpx>=0.28.1",
    "ipython-beautifulsoup>=0.3",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "selenium>=4.40.0",
    "seleniumbase>=4.46.2",
    "sqlalchemy>=2.0.46",
    "undetected-chromedriver>=3.5.5",
    "uvicorn>=0.40.0",
]
